--- a/FolderMemo/App.xaml
+++ b/FolderMemo/App.xaml
@@ -3,15 +3,21 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cc="clr-namespace:WpfControlLibrary;assembly=WpfControlLibrary"
-    xmlns:local="clr-namespace:WpfApp1"
+    xmlns:viewmodels="clr-namespace:FolderMemo.ViewModels"
+    Exit="Application_Exit"
     StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/WpfControlLibrary;component/Themes/ContentButton.xaml" />
-
+                <ResourceDictionary Source="pack://application:,,,/WpfControlLibrary;component/Themes/HintTextBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <Style BasedOn="{StaticResource ContentButtonStyle}" TargetType="{x:Type cc:ContentButton}" />
+
+            <viewmodels:ViewModelLocator x:Key="Locator" />
         </ResourceDictionary>
+
     </Application.Resources>
+
+
 </Application>
