--- a/FolderMemo/MainWindow.xaml
+++ b/FolderMemo/MainWindow.xaml
@@ -6,32 +6,40 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:enhance="clr-namespace:Utils.Enhancement;assembly=Utils.Enhancement"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
-    Width="800"
-    Height="450"
+    xmlns:sys="clr-namespace:System;assembly=System.Runtime"
+    Title="MainWindow" 
+    Width="Auto"
+    Height="Auto"
+    DataContext="{Binding Main, Source={StaticResource Locator}}"
+    ResizeMode="NoResize"
+    SizeToContent="WidthAndHeight"
     mc:Ignorable="d">
-    <Window.Resources>
-        <Style TargetType="TextBox" />
-    </Window.Resources>
+    <Window.Resources />
     <Grid>
         <Border
+            x:Name="bodyBorder"
             Width="300"
             Height="400"
             Padding="20"
+            Margin="20"
             Background="AliceBlue"
             CornerRadius="20">
 
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="60" />
-                    <RowDefinition Height="60" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="30" />
                     <RowDefinition />
-                    <RowDefinition />
+                    <RowDefinition Height="40" />
                 </Grid.RowDefinitions>
+                <Label Content="文件夹路径" />
                 <Border
-                    Grid.Row="0"
+                    Grid.Row="1"
                     Height="30"
-                    Padding="8"
+                    Padding="8,4,4,4"
                     Background="White"
                     BorderBrush="LightGray"
                     BorderThickness="1"
@@ -39,53 +47,83 @@
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
-                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="20" />
                         </Grid.ColumnDefinitions>
-                        <TextBox
-                            enhance:HintAssist.Hint="文件夹路径"
-                            enhance:HintAssist.HintOpacity=".26"
+                        <cc:HintTextbox
+                            VerticalContentAlignment="Center"
                             BorderThickness="0"
+                            HintText="请指定要备注的文件夹"
                             Text="{Binding FolderFullPath}" />
+
                         <cc:ContentButton
                             Grid.Column="1"
-                            BorderThickness="0"
+                            Width="16"
+                            Height="16"
+                            BorderBackground="White"
+                            BorderThickness="2"
                             Command="{Binding OpenFolderCommand}"
-                            CornerRadius="0">
-                            <Image Source="pack://application:,,,/FolderMemo;component/Resources/Folder-32.png" Stretch="Fill" />
-                        </cc:ContentButton>
+                            Content="　"
+                            CornerRadius="20" />
                     </Grid>
                 </Border>
+                <Label Grid.Row="2" Content="文件夹备注" />
                 <Border
-                    Grid.Row="1"
-                    Height="30"
-                    Padding="8"
+                    Grid.Row="3"
+                    Height="60"
+                    Padding="8,4,4,4"
                     Background="White"
                     BorderBrush="LightGray"
                     BorderThickness="1"
                     CornerRadius="8">
-                    <TextBox
-                        enhance:HintAssist.Hint="备注文字"
-                        enhance:HintAssist.HintOpacity=".26"
+                    <cc:HintTextbox
+                        AcceptsReturn="True"
                         BorderThickness="0"
-                        Text="{Binding FolderRemarks}" />
+                        HintText="备注文字"
+                        Text="{Binding FolderRemarks}"
+                        TextWrapping="Wrap"
+                        VerticalScrollBarVisibility="Visible" />
                 </Border>
 
-                <cc:ContentButton
-                    BorderThickness="0"
-                    Command="{Binding OpenFolderCommand}"
-                    CornerRadius="0">
-                    <Image Source="pack://application:,,,/FolderMemo;component/Resources/Folder-32.png" Stretch="Fill" />
-                </cc:ContentButton>
-                <StackPanel Grid.Row="2">
+                <Grid Grid.Row="4">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="30" />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="文件夹图标" />
+
+                    <cc:ContentButton
+                        Grid.Column="1"
+                        Width="16"
+                        Height="16"
+                        BorderBackground="{Binding Background, ElementName=bodyBorder}"
+                        BorderThickness="0"
+                        Command="{Binding SelectIconCommand}"
+                        CornerRadius="0">
+                        <Image Source="pack://application:,,,/FolderMemo;component/Resources/Folder-32.png" Stretch="Fill" />
+                    </cc:ContentButton>
+                </Grid>
+                <StackPanel
+                    Grid.Row="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    Orientation="Vertical">
                     <TextBox
-                        enhance:HintAssist.Hint="选择图标"
-                        enhance:HintAssist.HintOpacity=".26"
                         BorderThickness="0"
                         Text="{Binding IconFileFullPath}"
                         Visibility="Collapsed" />
+                    <Border
+                        Padding="10"
+                        Background="White"
+                        BorderBrush="LightBlue"
+                        BorderThickness="1">
+                        <Image
+                            Width="64"
+                            Height="64"
+                            Source="{Binding ImageUri}"
+                            Stretch="Uniform" />
+                    </Border>
 
-                    <Image Source="{Binding IconFileFullPath}" />
-                    <ListBox>
+                    <!--<ListBox>
                         <ListBox.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <StackPanel Orientation="Horizontal" />
@@ -96,11 +134,11 @@
                                 <Grid />
                             </DataTemplate>
                         </ListBox.ItemTemplate>
-                    </ListBox>
+                    </ListBox>-->
                 </StackPanel>
 
-                <StackPanel Grid.Row="3">
-                    <Button
+                <StackPanel Grid.Row="6">
+                    <cc:ContentButton
                         x:Name="btnSave"
                         Width="100"
                         Height="40"
