--- a/FolderMemo/MainWindow.xaml
+++ b/FolderMemo/MainWindow.xaml
@@ -7,9 +7,10 @@
     xmlns:enhance="clr-namespace:Utils.Enhancement;assembly=Utils.Enhancement"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sys="clr-namespace:System;assembly=System.Runtime"
-    Title="MainWindow" 
+    Title="文件夹备注程序"
     Width="Auto"
     Height="Auto"
+    AllowDrop="True"
     DataContext="{Binding Main, Source={StaticResource Locator}}"
     ResizeMode="NoResize"
     SizeToContent="WidthAndHeight"
@@ -20,8 +21,8 @@
             x:Name="bodyBorder"
             Width="300"
             Height="400"
-            Padding="20"
             Margin="20"
+            Padding="20"
             Background="AliceBlue"
             CornerRadius="20">
 
@@ -35,7 +36,7 @@
                     <RowDefinition />
                     <RowDefinition Height="40" />
                 </Grid.RowDefinitions>
-                <Label Content="文件夹路径" />
+                <Label Content="文件夹路径：" />
                 <Border
                     Grid.Row="1"
                     Height="30"
@@ -50,6 +51,10 @@
                             <ColumnDefinition Width="20" />
                         </Grid.ColumnDefinitions>
                         <cc:HintTextbox
+                            x:Name="txtFolderName"
+                            AllowDrop="True"
+                            PreviewDragOver="txtFolderName_PreviewDragOver"
+                            PreviewDrop="txtFolderName_PreviewDrop"
                             VerticalContentAlignment="Center"
                             BorderThickness="0"
                             HintText="请指定要备注的文件夹"
@@ -63,10 +68,11 @@
                             BorderThickness="2"
                             Command="{Binding OpenFolderCommand}"
                             Content="　"
-                            CornerRadius="20" />
+                            CornerRadius="20"
+                            ToolTip="打开文件夹选择对话框" />
                     </Grid>
                 </Border>
-                <Label Grid.Row="2" Content="文件夹备注" />
+                <Label Grid.Row="2" Content="文件夹备注：" />
                 <Border
                     Grid.Row="3"
                     Height="60"
@@ -89,7 +95,7 @@
                         <ColumnDefinition />
                         <ColumnDefinition Width="30" />
                     </Grid.ColumnDefinitions>
-                    <Label Content="文件夹图标" />
+                    <Label Content="文件夹图标：" />
 
                     <cc:ContentButton
                         Grid.Column="1"
@@ -98,7 +104,8 @@
                         BorderBackground="{Binding Background, ElementName=bodyBorder}"
                         BorderThickness="0"
                         Command="{Binding SelectIconCommand}"
-                        CornerRadius="0">
+                        CornerRadius="0"
+                        ToolTip="打开图标文件选择对话框">
                         <Image Source="pack://application:,,,/FolderMemo;component/Resources/Folder-32.png" Stretch="Fill" />
                     </cc:ContentButton>
                 </Grid>
@@ -112,10 +119,14 @@
                         Text="{Binding IconFileFullPath}"
                         Visibility="Collapsed" />
                     <Border
+                        x:Name="ctrlIconPreview"
                         Padding="10"
+                        AllowDrop="True"
                         Background="White"
                         BorderBrush="LightBlue"
-                        BorderThickness="1">
+                        BorderThickness="1"
+                        PreviewDragOver="ctrlIconPreview_PreviewDragOver"
+                        PreviewDrop="ctrlIconPreview_PreviewDrop">
                         <Image
                             Width="64"
                             Height="64"
