--- a/FolderMemo/Resources/StringResource.xaml
+++ b/FolderMemo/Resources/StringResource.xaml
@@ -3,6 +3,7 @@
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <sys:String x:Key="ChangeDirectoryDialogDescription">Select a folder you want to add memo</sys:String>
 
+    <sys:String x:Key="AppTitle">Folder Memo</sys:String>
     <sys:String x:Key="ChangeDirectoryDialogOpenFail">Not supported</sys:String>
     <sys:String x:Key="SinglePageFolderPath">Folder Path：</sys:String>
     <sys:String x:Key="SinglePageFolderMemo">Folder Memo：</sys:String>
@@ -15,7 +16,7 @@
     <sys:String x:Key="SaveCompleteText">You may need to wait a couple of time or reopen Explorer to see the effect.</sys:String>
     <sys:String x:Key="LanguageButtonText">切换为中文</sys:String>
 
-    <sys:String x:Key="ResetText">Reset</sys:String>
+    <sys:String x:Key="ResetText">Reset and Save</sys:String>
     <sys:String x:Key="UnauthorizedAccessText">Access Denied. Relaunch program with "Run as Administrator".</sys:String>
     <sys:String x:Key="AdminModeHint">Note: In Administrator mode, Drag N Drop feature will not work. </sys:String>
 </ResourceDictionary>
