--- a/FolderMemo/Resources/StringResource.zh-CN.xaml
+++ b/FolderMemo/Resources/StringResource.zh-CN.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
+    <sys:String x:Key="AppTitle">备注文件夹</sys:String>
 	<sys:String x:Key="ChangeDirectoryDialogDescription">选择要添加注释的文件夹</sys:String>
 	<sys:String x:Key="ChangeDirectoryDialogOpenFail">不支持的系统</sys:String>
 	<sys:String x:Key="SinglePageFolderPath">文件夹路径：</sys:String>
@@ -15,7 +16,7 @@
 	<sys:String x:Key="FolderMemoEmptyErrorText">文件夹备注未填写</sys:String>
 	<sys:String x:Key="FolderPathErrorText">文件夹路径错误</sys:String>
     <sys:String x:Key="LanguageButtonText">Switch To English</sys:String>
-    <sys:String x:Key="ResetText">重置</sys:String>
+    <sys:String x:Key="ResetText">重置并保存</sys:String>
     <sys:String x:Key="UnauthorizedAccessText">权限不足, 请以管理员身份运行.</sys:String>
     <sys:String x:Key="AdminModeHint">注意: 管理员身份运行的模式下将不支持拖拽.</sys:String>
     
